# seaware

./: .gitignore  CMakeLists.txt  Makefile  config.h  converter.h  datatypes.h  errorHandle.h  files.h  filetypes.h  fs.h  json.h  main.c  os.h  seaware.h  string.h
datatypes/: string.c  string.h
filetypes/: ini.c  ini.h  json.c  json.h
fs/: directories.h  files.c  files.h
src/: config.c  converter.c  files.c  files.h  json.c  main.c  string.c
src/filetypes/: json.h
test-files/: test.ini  test.json
